@@ -1,3 +1,6 @@
+20131016 - fhabermann
+* added subtitle, table of contents and descripion for page
+
 20131014 - fhabermann
 * added anker.js to handle ankers
 
